--- a/package.json
+++ b/package.json
@@ -4,28 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --watch",
-    "server": "nodemon --exec babel-node ./src/server.js",
-    "start": "npm-run-all --parallel build server"
+    "build": "NODE_ENV=production webpack --watch",
+    "build:watch": "webpack --watch",
+    "server:watch": "nodemon --exec babel-node ./src/server.js",
+    "start:dev": "npm-run-all --parallel build:watch server:watch",
+    "start:prod": "npm-run-all --parallel build server:watch",
+    "start": "npm run start:dev"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "express": "^4.16.1",
-    "flow-bin": "^0.41.0",
-    "jest": "^21.2.1",
     "nodemon": "^1.17.1",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.5.0",
